--- a/index.html
+++ b/index.html
@@ -19,8 +19,44 @@
         <div class="container">
             <p class="main__title">All users:</p>
 
-            <div class="copywriters non-selectable">
-                
+            <div class="copywriters non-selectable"></div>
+
+            <div class="selected-copywriter">
+                <p class="main__title">User info:</p>
+
+                <table class="selected-copywriter__info">
+                    <tr>
+                        <th>Name:</th>
+                        <td class="selected-copywriter__name"></td>
+                    </tr>
+
+                    <tr>
+                        <th>Username:</th>
+                        <td class="selected-copywriter__username"></td>
+                    </tr>
+
+                    <tr>
+                        <th>Address:</th>
+                        <td class="selected-copywriter__address"></td>
+                    </tr>
+
+                    <tr>
+                        <th>Email:</th>
+                        <td class="selected-copywriter__email"></td>
+                    </tr>
+
+                    <tr>
+                        <th>Phone:</th>
+                        <td class="selected-copywriter__phone"></td>
+                    </tr>
+
+                    <tr>
+                        <th>Website:</th>
+                        <td class="selected-copywriter__website"></td>
+                    </tr>
+                </table>
+
+                <button class="selected-copywriter__show-posts-button">Show posts</button>
             </div>
         </div>
     </div>
