--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <div id="main">
         <div class="container">
             <p class="main__title">All users:</p>
-
             <div class="copywriters non-selectable"></div>
 
             <div class="selected-copywriter">
@@ -57,11 +56,16 @@
                 </table>
 
                 <button class="selected-copywriter__show-posts-button">Show posts</button>
+
+                <div class="selected-copywriter__posts-block">
+                    <p class="main__title">User's posts:</p>
+
+                    <div class="selected-copywriter__posts"></div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script type="module" src="js/script.js"></script>
+        <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
