--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@
             </div>
         </div>
 
-        <script type="module" src="js/script.js"></script>
+        <script src="js/urls.js"></script>
+        <script src="js/cachingDecorator.js"></script>
+        <script src="js/loadingHelper.js"></script>
+
+        <script src="js/drawers/post.js"></script>
+        <script src="js/drawers/user.js"></script>
+        <script src="js/drawers/user-info.js"></script>
+
+        <script src="js/script.js"></script>
 </body>
 
 </html>
